force-app/main/default/objects/Plazo__c/Plazo__c.object-meta.xml
<CustomObject>
    <description>Objeto para activar o desactivar los plazos de seguros</description>
    <label>Plazo</label>
    <nameField>
        <label>Número de plazo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plazos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>