force-app/main/default/objects/Plazo__c/fields/dsaleMensual__c.field-meta.xml
<CustomField>
    <fullName>dsaleMensual__c</fullName>
    <label>Mensual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>