force-app/main/default/objects/Plazo__c/fields/DSALES_Activo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para informar que el plazo esta desactivado.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>