force-app/main/default/objects/Plazo__c/fields/DSALES_Descripcin__c.field-meta.xml
<CustomField>
    <fullName>dsalesDescripcion__c</fullName>
    <description>Campo para ingresar la descripción del plazo</description>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>