force-app/main/default/objects/Plazo__c/fields/Dsales_Plazo__c.field-meta.xml
<CustomField>
    <fullName>Dsales_Plazo__c</fullName>
    <description>Campo para indicar el plazo en que se vende el seguro</description>
    <label>Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>