force-app/main/default/objects/Plazo__c/fields/DSALES_Seguro__c.field-meta.xml
<CustomField>
    <fullName>dsalesSeguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionarlo con el producto seguro</description>
    <label>Seguro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.DSales_Tipo_de_Producto__c</field>
            <operation>equals</operation>
            <value>Seguro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Plazos</relationshipLabel>
    <relationshipName>Plazos</relationshipName>
    <type>Lookup</type>
</CustomField>