force-app/main/default/objects/Plazo__c/fields/dsalesContado__c.field-meta.xml
<CustomField>
    <fullName>dsalesContado__c</fullName>
    <label>Contado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>