force-app/main/default/objects/Plazo__c/fields/dsalesOpcionPago__c.field-meta.xml
<CustomField>
    <fullName>dsalesOpcionPago__c</fullName>
    <label>Opción de pago</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>