force-app/main/default/objects/Plazo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>dsalesSeguro__c</columns>
    <columns>DSALES_Activo__c</columns>
    <columns>dsalesDescripcion__c</columns>
    <columns>DSALES_Plazo__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dsalesSeguro__c</field>
        <operation>contains</operation>
        <value>RC</value>
    </filters>
    <label>Todos</label>
</ListView>