force-app/main/default/objects/Plazo__c/listViews/DSALES_Misplazos.listView-meta.xml
<ListView>
    <fullName>DSALES_Misplazos</fullName>
    <columns>NAME</columns>
    <columns>dsalesSeguro__c</columns>
    <columns>DSALES_Plazo__c</columns>
    <columns>DSALES_Activo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>dsalesDescripcion__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis plazos</label>
</ListView>