force-app/main/default/objects/Plazo__c/listViews/Plazos_SM_RCEXC.listView-meta.xml
<ListView>
    <fullName>Plazos_SM_RCEXC</fullName>
    <columns>NAME</columns>
    <columns>dsalesSeguro__c</columns>
    <columns>Dsales_Plazo__c</columns>
    <columns>DSALES_Activo__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dsalesSeguro__c</field>
        <operation>equals</operation>
        <value>RCEXC</value>
    </filters>
    <label>Plazos SM RCEXC</label>
</ListView>